--- a/index.html
+++ b/index.html
@@ -883,7 +883,8 @@
                 <img src="images/Cover2.png" alt="People, not algorithms, determine success" class="welcome-image">
             </div>
             <div class="welcome-content fade-in">
-                <h2>Wellcome</h2>
+                <h2>Applied AI Research for Engineering Leaders</h2>
+                <h3>Bring research expertise to your engineering challenges</h3>
                 <p>I run a solo consulting practice focused on helping startups build better practices as many software companies transition to AI.</p>
 
                 <p>Your talented engineering team deserves to adapt to the AI revolution without replacement. You need a proven approach that transforms your existing team into AI experts. With the right frameworks and guidance, your team can achieve measurable improvements in just 2-3 months.</p>
