--- a/index.html
+++ b/index.html
@@ -883,14 +883,16 @@
                 <img src="images/Cover2.png" alt="People, not algorithms, determine success" class="welcome-image">
             </div>
             <div class="welcome-content fade-in">
-                <h2>Applied AI Research for Engineering Leaders</h2>
-                <h3>Bring research expertise to your engineering challenges</h3>
-                <p>I run a solo consulting practice focused on helping startups build better practices as many software companies transition to AI.</p>
+                <h2>Applied AI Research Consultant</h2>
+            
+                <p>I do consultancy on AI problems that need research, not just engineering.</p>
 
-                <p>Your talented engineering team deserves to adapt to the AI revolution without replacement. You need a proven approach that transforms your existing team into AI experts. With the right frameworks and guidance, your team can achieve measurable improvements in just 2-3 months.</p>
+                <p>My focus is provable code generation and cross-domain retrieval systems. I work with select startups and labs on applied research—the kind where you need both formal methods and something that actually ships.</p>
 
-                <p>You get independence, not dependencies. You get capabilities, not ongoing contracts.</p>
+                <p>I'm based in Madrid, working internationally with US labs and companies. I've worked with ventures founded by Y-Combinator alumni, Ex-Uber, and Ex-Amazon.</p>
 
+                <p>I take on limited engagements—I'm more interested in quality than volume. If you're tackling provable AI systems, multi-hop RAG with invariant preservation, or similar problems that sit between research and production, we must talk.</p>    
+                
                 <a href="#contact" class="cta-button">Schedule a 30-min Strategy Call</a>
             </div>
         </div>
@@ -899,12 +901,13 @@
     <!-- Business Section -->
     <section id="business" class="section">
         <div class="container">
-            <h2 class="section-title fade-in">AI Consulting for Engineering Leaders</h2>
+            <h2 class="section-title fade-in">Applied AI Research for Engineering Team Leaders</h2>
             <div class="business-content">
                 <div class="business-text fade-in">
-                    <h3>Transform your great engineers into great AI engineers</h3>
-                    <p>Your talented engineering team deserves to adapt to the AI revolution without replacement. You need a proven approach that transforms your existing team into AI experts. With the right frameworks and guidance, your team can achieve measurable improvements in just 2-3 months.</p>
-                    <p>You get independence, not dependencies. You get capabilities, not ongoing contracts.</p>
+                    <h3>Add research capabilities to your engineering excellence</h3>
+                    <p>Your engineering team is talented, but complex AI challenges often require applied research alongside engineering. When you need provable code generation, cross-domain retrieval systems, or solutions where formal verification meets production systems, you need research expertise embedded with your team.
+Through focused research engagements, I work alongside your engineers as an external research partner—bringing theoretical rigor and research methodologies that complement your team's engineering capabilities. Together, we deliver working systems and frameworks in 2-3 months.</p>
+                    <p>You get research capabilities integrated with your team, not external dependencies. You get proven approaches your team can build on, not one-off solutions.</p>
                 </div>
                 <div class="business-highlights fade-in">
                     <h4>When our engagement ends, you'll have:</h4>
