--- a/index.html
+++ b/index.html
@@ -910,11 +910,11 @@ Through focused research engagements, I work alongside your engineers as an exte
                     <p>You get research capabilities integrated with your team, not external dependencies. You get proven approaches your team can build on, not one-off solutions.</p>
                 </div>
                 <div class="business-highlights fade-in">
-                    <h4>When our engagement ends, you'll have:</h4>
+                    <h4>After we work together, your team will:</h4>
                     <ul>
-                        <li>Continuous improvement processes - Establish feedback loops that transform user interactions into measurable product enhancements</li>
-                        <li>Accelerated experimentation cycles - Transform weeks of testing into days, enabling 3-5x faster product iteration</li>
-                        <li>Data-driven prioritization framework - Replace intuition with systematic methods to identify the highest-impact AI opportunities</li>
+                        <li>- Establish feedback loops that transform user interactions into measurable product enhancements</li>
+                        <li>- Transform weeks of testing into days, enabling 3-5x faster product iteration</li>
+                        <li>- Replace intuition with systematic methods to identify the highest-impact AI opportunities</li>
                     </ul>
                 </div>
             </div>
@@ -927,38 +927,33 @@ Through focused research engagements, I work alongside your engineers as an exte
             <h2 class="section-title fade-in">Core Technical Capabilities</h2>
             <div class="capabilities-grid">
                 <div class="capability-card fade-in">
-                    <h4>Advanced Prompt Engineering & LLM Optimization</h4>
-                    <p>Systematic approaches to prompt design, evaluation, and optimization for production systems. Build reliable, consistent outputs from language models at scale.</p>
+                    <h4>Formal Verification for AI-Generated Code</h4>
+                    <p>Applying automated reasoning and proof systems to verify that LLM-generated code meets formal specifications.</p>
                 </div>
 
                 <div class="capability-card fade-in">
-                    <h4>Rapid Prototyping & Validation</h4>
-                    <p>Turn AI concepts into working prototypes in days, not weeks. Validate technical feasibility and business impact before committing to full development cycles.</p>
+                    <h4>Provable Correctness in LLM Systems</h4>
+                    <p>Building constraint systems that enforce invariants LLMs can't reliably maintain on their own.</p>
                 </div>
 
                 <div class="capability-card fade-in">
-                    <h4>Agent Systems Architecture</h4>
-                    <p>Design and implement autonomous AI workflows that handle complex, multi-step processes. From simple task automation to sophisticated reasoning systems.</p>
+                    <h4>Cross-Domain Retrieval with Semantic Invariants</h4>
+                    <p>Designing retrieval systems that preserve semantic relationships across different knowledge domains.</p>
                 </div>
 
                 <div class="capability-card fade-in">
-                    <h4>Document Extraction & Processing</h4>
-                    <p>Build robust pipelines that transform unstructured documents into structured, actionable data. Handle edge cases and maintain accuracy at scale.</p>
+                    <h4>Multi-Hop Reasoning with Guaranteed Properties</h4>
+                    <p>Implementing structured reasoning chains where intermediate steps have verifiable properties.</p>
                 </div>
 
                 <div class="capability-card fade-in">
-                    <h4>Hands-on Skills Transfer</h4>
+                    <h4>Research Methodologies that Produce Production Systems</h4>
                     <p>Pair programming sessions and intensive training that builds permanent AI capabilities in your team. No black boxes - your engineers learn to own and extend the systems.</p>
                 </div>
 
                 <div class="capability-card fade-in">
                     <h4>Systematic Experimentation</h4>
-                    <p>Establish frameworks for continuous AI improvement. Design experiments, measure impact, and systematically optimize your AI applications for business outcomes.</p>
-                </div>
-
-                <div class="capability-card fade-in">
-                    <h4>Strategic Content & Positioning</h4>
-                    <p>Leverage AI expertise for growth and developer relations. Define clear value propositions, create compelling technical content, and build market credibility.</p>
+                    <p>Translating research insights into deployable systems with known failure modes and measurable reliability.</p>
                 </div>
             </div>
         </div>
