--- a/index.html
+++ b/index.html
@@ -927,28 +927,28 @@ Through focused research engagements, I work alongside your engineers as an exte
             <h2 class="section-title fade-in">Core Technical Capabilities</h2>
             <div class="capabilities-grid">
                 <div class="capability-card fade-in">
-                    <h4>Formal Verification for AI-Generated Code</h4>
-                    <p>Applying automated reasoning and proof systems to verify that LLM-generated code meets formal specifications.</p>
+                    <h4>Quantifying System Constraints Before Deployment Failures</h4>
+                    <p>Empirical measurements of failure thresholds with statistical confidence intervals. Organizations get "this will break when X exceeds Y" instead of vague warnings.</p>
                 </div>
 
                 <div class="capability-card fade-in">
-                    <h4>Provable Correctness in LLM Systems</h4>
-                    <p>Building constraint systems that enforce invariants LLMs can't reliably maintain on their own.</p>
+                    <h4>Systematic Failure Mode Mapping Across Deployment Scenarios</h4>
+                    <p>Domain-specific failure characterization. Not "RAG might have problems" but "negation queries fail 40% of the time in legal contracts, cross-reference queries fail 50% in technical specs.</p>
                 </div>
 
                 <div class="capability-card fade-in">
-                    <h4>Cross-Domain Retrieval with Semantic Invariants</h4>
-                    <p>Designing retrieval systems that preserve semantic relationships across different knowledge domains.</p>
+                    <h4>Complexity Framework Application to Business Systems</h4>
+                    <p>Mathematical models of system behavior grounded in complexity theory. Your advertising work translates marketing spend into conversational volume using frameworks from thermodynamics, providing quantitative predictions where conventional approaches rely on intuition.</p>
                 </div>
 
                 <div class="capability-card fade-in">
-                    <h4>Multi-Hop Reasoning with Guaranteed Properties</h4>
+                    <h4>Empirical Validation of Vendor Claims</h4>
                     <p>Implementing structured reasoning chains where intermediate steps have verifiable properties.</p>
                 </div>
 
                 <div class="capability-card fade-in">
-                    <h4>Research Methodologies that Produce Production Systems</h4>
-                    <p>Pair programming sessions and intensive training that builds permanent AI capabilities in your team. No black boxes - your engineers learn to own and extend the systems.</p>
+                    <h4>Research Methodologies that Transform into Production Systems</h4>
+                    <p>Comparative performance data under controlled conditions. Your multi-model testing reveals which vendors hallucinate despite grounding, which over-refuse appropriate queries, which meet latency requirements.</p>
                 </div>
 
                 <div class="capability-card fade-in">
@@ -1033,7 +1033,7 @@ Through focused research engagements, I work alongside your engineers as an exte
                         <svg class="contact-icon" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M20,8L12,13L4,8V6L12,11L20,6M20,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V6C22,4.89 21.1,4 20,4Z"/>
                         </svg>
-                        Email
+                        javier@jmarin.info
                     </a>
                     <a href="https://www.linkedin.com/in/javiermarinvalenzuela/" target="_blank" class="contact-link">
                         <svg class="contact-icon" viewBox="0 0 24 24" fill="currentColor">
@@ -1044,7 +1044,7 @@ Through focused research engagements, I work alongside your engineers as an exte
                 </div>
 
                 <div class="contact-info">
-                    <a href="https://calendly.com/javier-marin-ai/strategy-call" target="_blank" class="cta-button" style="font-size: 1.2rem; padding: 20px 40px;">
+                    <a href="https://form.typeform.com/to/ABHMpM9Y" target="_blank" class="cta-button" style="font-size: 1.2rem; padding: 20px 40px;">
                         Schedule a 30-min Strategy Call
                     </a>
 
