--- a/index.html
+++ b/index.html
@@ -883,17 +883,17 @@
                 <img src="images/Cover2.png" alt="People, not algorithms, determine success" class="welcome-image">
             </div>
             <div class="welcome-content fade-in">
-                <h2>Applied AI Research Consultant</h2>
+                <h2>What Can I do for You</h2>
             
                 <p>I do consultancy on AI problems that need research, not just engineering.</p>
 
-                <p>My focus is provable code generation and cross-domain retrieval systems. I work with select startups and labs on applied research—the kind where you need both formal methods and something that actually ships.</p>
+                <p>My focus is infrastructure characterization and interdisciplinary modeling. I work with select startups and labs on applied research—the kind where you need both formal methods and something that actually ships.</p>
 
                 <p>I'm based in Madrid, working internationally with US labs and companies. I've worked with ventures founded by Y-Combinator alumni, Ex-Uber, and Ex-Amazon.</p>
 
-                <p>I take on limited engagements—I'm more interested in quality than volume. If you're tackling provable AI systems, multi-hop RAG with invariant preservation, or similar problems that sit between research and production, we must talk.</p>    
+                <p>I take on limited engagements—I'm more interested in quality than volume. If you're tackling problems that sit between research and production, we might talk.</p>    
                 
-                <a href="#contact" class="cta-button">Schedule a 30-min Strategy Call</a>
+                <a href="https://form.typeform.com/to/ABHMpM9Y" class="cta-button">Schedule a 30-min Strategy Call</a>
             </div>
         </div>
     </section>
@@ -1019,13 +1019,13 @@ Through focused research engagements, I work alongside your engineers as an exte
     <!-- Contact Section -->
     <section id="contact" class="section">
         <div class="container">
-            <h2 class="section-title fade-in">Transform your great engineers into great AI engineers</h2>
+            <h2 class="section-title fade-in">Get systematic characterization of AI deployment constraints</h2>
             <div class="contact-content fade-in">
                 <p style="font-size: 1.2rem; margin-bottom: 30px; color: #FBF5F0;">
-                    Your talented engineering team deserves to adapt to the AI revolution without replacement. You need a proven approach that transforms your existing team into AI experts. With the right frameworks and guidance, your team can achieve measurable improvements in just 2-3 months.
+                    Bring reserach skills that transforms your existing team into AI experts. With the right frameworks and guidance, your team can achieve measurable improvements in just 2-3 months.
                 </p>
                 <p style="font-size: 1.2rem; margin-bottom: 30px; color: #FBF5F0;">
-                    You get independence, not dependencies. You get capabilities, not ongoing contracts.
+                    You get infrastructure science - measuring constraints, identifying failure modes, quantifying risks - that solves real problems deploying AI systems at scale.
                 </p>
 
                 <div class="contact-links">
@@ -1039,7 +1039,7 @@ Through focused research engagements, I work alongside your engineers as an exte
                         <svg class="contact-icon" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M19 3A2 2 0 0 1 21 5V19A2 2 0 0 1 19 21H5A2 2 0 0 1 3 19V5A2 2 0 0 1 5 3H19M18.5 18.5V13.2A3.26 3.26 0 0 0 15.24 9.94C14.39 9.94 13.4 10.46 12.92 11.24V10.13H10.13V18.5H12.92V13.57C12.92 12.8 13.54 12.17 14.31 12.17A1.4 1.4 0 0 1 15.71 13.57V18.5H18.5M6.88 8.56A1.68 1.68 0 0 0 8.56 6.88C8.56 5.95 7.81 5.19 6.88 5.19A1.69 1.69 0 0 0 5.19 6.88C5.19 7.81 5.95 8.56 6.88 8.56M8.27 18.5V10.13H5.5V18.5H8.27Z"/>
                         </svg>
-                        LinkedIn
+                        My LinkedIn profile
                     </a>
                 </div>
 
