Implement UI improvements and Typeform integration
- Fix Business section layout: equal width columns (1fr 1fr) for better alignment
- Update all Schedule buttons to link to Typeform: https://form.typeform.com/to/ABHMpM9Y
- Improve capability cards: Silver Bird background with Patience hover effects
- Fix gradient direction: Aegean Sky to Dancing Mist (left to right)
- Replace Medium icon with more identifiable design
- Enhanced hover effects and visual consistency

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             --accent-blue-dark: #112358;
             --accent-orange: #E48B59;
             --accent-light: #BFC8D8;
-            --gradient: linear-gradient(135deg, #BFC8D8, #E48B59);
+            --gradient: linear-gradient(135deg, #E48B59, #BFC8D8);
         }
 
         * {
@@ -428,7 +428,7 @@
         /* Business Section */
         .business-content {
             display: grid;
-            grid-template-columns: 1fr 2fr;
+            grid-template-columns: 1fr 1fr;
             gap: 50px;
             align-items: center;
         }
@@ -486,17 +486,19 @@
         }
 
         .capability-card {
-            background: #BFC8D8;
+            background: #FBF5F0;
             padding: 30px;
             border-radius: 15px;
-            border: 1px solid rgba(230, 221, 214, 0.1);
+            border: 1px solid rgba(230, 221, 214, 0.2);
             transition: all 0.3s ease;
+            cursor: pointer;
         }
 
         .capability-card:hover {
+            background: #E6DDD6;
             transform: translateY(-5px);
             border-color: #E6DDD6;
-            box-shadow: 0 15px 35px rgba(230, 221, 214, 0.1);
+            box-shadow: 0 15px 35px rgba(230, 221, 214, 0.3);
         }
 
         .capability-card h4 {
@@ -891,9 +893,9 @@
 
                 <p>I'm based in Madrid, working internationally with US labs and companies. I've worked with ventures founded by Y-Combinator alumni, Ex-Uber, and Ex-Amazon.</p>
 
-                <p>I take on limited engagements—I'm more interested in quality than volume. If you're tackling problems that sit between research and production, we might talk.</p>    
-                
-                <a href="https://form.typeform.com/to/ABHMpM9Y" class="cta-button">Schedule a 30-min Strategy Call</a>
+                <p>I take on limited engagements—I'm more interested in quality than volume. If you're tackling problems that sit between research and production, we might talk.</p>
+
+                <a href="https://form.typeform.com/to/ABHMpM9Y" target="_blank" class="cta-button">Schedule a 30-min Strategy Call</a>
             </div>
         </div>
     </section>
@@ -1001,7 +1003,7 @@ Through focused research engagements, I work alongside your engineers as an exte
                     <h3>Monthly Advisory</h3>
                     <div class="price">$15,000<span style="font-size: 1rem; color: #FBF5F0;">/month</span></div>
                     <p>Weekly strategy sessions, unlimited access, for teams with ongoing needs</p>
-                    <a href="#contact" class="cta-button">Schedule a 30-min Strategy Call</a>
+                    <a href="https://form.typeform.com/to/ABHMpM9Y" target="_blank" class="cta-button">Schedule a 30-min Strategy Call</a>
                 </div>
 
                 <div class="fade-in" style="text-align: center; margin-top: 40px;">
@@ -1081,7 +1083,7 @@ Through focused research engagements, I work alongside your engineers as an exte
                 </a>
                 <a href="https://medium.com/@javier-marin" target="_blank" class="social-link" aria-label="Medium Profile">
                     <svg class="social-icon" viewBox="0 0 24 24" fill="currentColor">
-                        <path d="M13.54,12A6.8,6.8 0 0,1 12.06,17.91L12.06,17.96C9.69,20.35 6.3,20.35 3.94,17.96C1.56,15.58 1.56,12.19 3.94,9.81C6.3,7.44 9.69,7.44 12.06,9.81C12.87,10.63 13.34,11.71 13.54,12M9.8,12C9.8,8.86 7.35,6.34 4.28,6.34C1.21,6.34 -1.24,8.86 -1.24,12C-1.24,15.14 1.21,17.66 4.28,17.66C7.35,17.66 9.8,15.14 9.8,12M16.95,11.7C16.95,9.13 15.96,7.04 14.72,7.04C13.5,7.04 12.5,9.13 12.5,11.7C12.5,14.26 13.5,16.35 14.72,16.35C15.96,16.35 16.95,14.26 16.95,11.7M22.58,11.4C22.58,9.58 22.25,8.1 21.84,8.1C21.43,8.1 21.1,9.58 21.1,11.4C21.1,13.22 21.43,14.7 21.84,14.7C22.25,14.7 22.58,13.22 22.58,11.4Z"/>
+                        <path d="M7.5 5C8.9 5 10 6.1 10 7.5S8.9 10 7.5 10 5 8.9 5 7.5 6.1 5 7.5 5M7.5 11.5C9.2 11.5 10.5 12.8 10.5 14.5V18.5H4.5V14.5C4.5 12.8 5.8 11.5 7.5 11.5M16.5 11.75C17.46 11.75 18.25 12.54 18.25 13.5V18.5H14.75V13.5C14.75 12.54 15.54 11.75 16.5 11.75M21 14.38C21.59 14.38 22.08 14.87 22.08 15.46V18.5H19.92V15.46C19.92 14.87 20.41 14.38 21 14.38Z"/>
                     </svg>
                 </a>
             </div>
